use_undefined_identifier/c0/check_piece_square
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/check_piece_square/src/utils.c:1236:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/check_piece_square/src/utils.c:1242:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/check_piece_square/src/utils.c:1250:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/check_piece_square/src/utils.c:1260:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/check_piece_square/src/utils.c:1266:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/check_piece_square/src/utils.c:1272:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
6 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/check_piece_square/src/obj/utils.o] Error 1
